fixed expr bg color on mobile

--- a/style.css
+++ b/style.css
@@ -849,7 +849,7 @@
             margin-left: -20em;
         }
         /* EXPERIENCE SECTION */
-        .experiencesec {
+        .experience {
             background-color: #3d3d3d;
         }
         /* Place the timelime to the left */
